# kopilka

./: .gitignore  AppImageBuilder.yml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  capture-screenshots.sh  dev-build.sh  install.sh  io.github.calstfrancis.kopilka.desktop  io.github.calstfrancis.kopilka.metainfo.xml  io.github.calstfrancis.kopilka.yml  publish-flatpak.sh  pyproject.toml
.github/workflows/: release.yml
kopilka/: __init__.py  desktop_install.py  kopilka.py
kopilka/data/: io.github.calstfrancis.kopilka.desktop
kopilka/logic/: calculations.py  print_sheet.py  sync.py  tax_calc.py  webdav_sync.py
kopilka/model/: budget.py  schema.py
kopilka/storage/: json_io.py
kopilka/ui/: app_window.py  charts.py  dashboard.py  forms.py  reports.py  savings.py  settings.py  setup_wizard.py  spending_log.py  styles.py  views.py
packaging/: kopilka.spec
screenshots/: demo-budget.json
